--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,16 +14,16 @@ jobs:
         include:
           - os: macos-latest
             TARGET: macos
-            CMD_BUILD: pyinstaller src/main.py --onefile --nowindow -n docker-remote-proxy
-            OUT_FILE_NAME: docker-remote-proxy
+            CMD_BUILD: pyinstaller src/main.py --onefile --nowindow -n docker-remote-proxy-macos
+            OUT_FILE_NAME: docker-remote-proxy-macos
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller src/main.py --onefile --nowindow -n docker-remote-proxy
             OUT_FILE_NAME: docker-remote-proxy.exe
           - os: ubuntu-latest
             TARGET: linux
-            CMD_BUILD: pyinstaller src/main.py --onefile --nowindow -n docker-remote-proxy
-            OUT_FILE_NAME: docker-remote-proxy  
+            CMD_BUILD: pyinstaller src/main.py --onefile --nowindow -n docker-remote-proxy-linux
+            OUT_FILE_NAME: docker-remote-proxy-linux  
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python 3.9
